<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
     >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/color_text_button"
        android:background="@color/color_background_button"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        />
    <TextView
    android:layout_marginTop="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_title_upper"
    android:layout_gravity="center"
    android:gravity="center"
    android:textColor="@color/color_text"
    android:textSize="30sp"
    android:textStyle="bold|italic"
    />

    <TableLayout
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="text"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPassword"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <CheckBox
                android:id="@+id/cb_keep_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:checked="false" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginRight="20dp"
                android:textStyle="bold|italic"
                style="?android:attr/buttonStyle"
                android:background="@drawable/bg_button"
                android:textColor="@color/color_text_button"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="?android:attr/buttonStyle"
                android:textStyle="bold|italic"
                android:background="@drawable/bg_button"
                android:textColor="@color/color_text_button"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:text="@string/login_forget_pass"
        android:textColor="@color/color_text"
        />

</LinearLayout>
