<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
     >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@color/color_text_button"
        android:background="@color/color_background_button"
        android:gravity="center"
        android:text="@string/register" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title_upper"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_span="2"
        android:textColor="@color/color_text"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_span="2"
        android:src="@drawable/no_avatar"
        android:layout_gravity="center"
        android:id="@+id/imv_user_avatar" />

    <TableLayout
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/account_require"
               android:textColor="@color/color_text"
               android:textSize="16sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/password_require"
               android:textColor="@color/color_text"
               android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pass_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name_require"
                android:textColor="@color/color_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email"
               android:textColor="@color/color_text"
               android:textSize="16sp" />

            <EditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp">
                 <requestFocus />
             </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/phone_require"
               android:textColor="@color/color_text"
               android:textSize="16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="phone" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/register"
                style="?android:attr/buttonStyle"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:background="@drawable/bg_button"
                android:textColor="@color/color_text_button"
                />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                style="?android:attr/buttonStyle"
                android:background="@drawable/bg_button"
                android:textColor="@color/color_text_button"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
