<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/color_text_button"
            android:background="@color/color_background_button"
            android:gravity="center"
            android:text="@string/add_match" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/tv_field_name"
            android:textColor="@color/color_text"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/price" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_max_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/max_person" />
            </android.support.design.widget.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="*"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_start"
                        android:textSize="16sp"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:drawableRight="@drawable/ic_update"
                        android:id="@+id/tv_date_start" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/hour_begin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:id="@+id/tv_begin_time" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_span="2"
                        android:progress="34"
                        android:layout_height="wrap_content"
                        android:id="@+id/sb_begin_time" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/hour_end" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:id="@+id/tv_end_time" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_span="2"
                        android:progress="34"
                        android:layout_height="wrap_content"
                        android:id="@+id/sb_end_time" />
                </TableRow>

            </TableLayout>

            <Button android:id="@+id/btn_add_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:background="@drawable/bg_button"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>